# skeme

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  ENTITY_IMPLEMENTATION.md  LICENSE  README.md  SESSION_FINAL.md  SESSION_SUMMARY.md  XML_DSSSL_GUIDE.md
crates/dazzle/: Cargo.toml
crates/dazzle-backend-sgml/: Cargo.toml
crates/dazzle-backend-sgml/src/: lib.rs
crates/dazzle-cli/: Cargo.toml
crates/dazzle-cli/src/: main.rs
crates/dazzle-core/src/: dsssl.dtd  fot.rs  grove.rs  lib.rs  scheme.rs
crates/dazzle-core/src/scheme/: environment.rs  evaluator.rs  integration_tests.rs  mod.rs  parser.rs  primitives.rs  value.rs
crates/dazzle-core/tests/: named_let_test.rs  sgml_output.rs
crates/dazzle-grove-libxml2/: Cargo.toml
crates/dazzle-grove-libxml2/src/: document.rs  lib.rs  node.rs  node_list.rs
crates/dazzle/src/: main.rs
crates/skeme-cli/src/: args.rs  main.rs
crates/skeme-core/src/: grove.rs  scheme.rs  types.rs
crates/skeme-core/src/primitives/: grove.rs  processing.rs  util.rs
crates/skeme-template/: Cargo.toml
crates/skeme-template/src/: lib.rs
examples/: README.md  class.dtd  codegen-dsssl.dsl  codegen-enhanced.dsl  codegen-file.scm  codegen-improved.scm  codegen-invalid.xml  codegen-valid.xml  codegen-xml-cdata.dsl  codegen-xml-mixed.dsl  codegen-xml-v2.dsl  codegen-xml.dsl  codegen.scm  codegen.xml  demo.scm  directory_creation.scm  hello.scm  hello.xml  modes-example.scm  navigate.scm  sample.xml  showcase.scm  showcase.xml  simple-dsssl.scm  simple-modes.scm  simple-true-dsssl.scm  true-dsssl.dsl  true-dsssl.scm
examples/lib/: java-helpers.scm  string-utils-cdata.scm  string-utils-simple.scm  string-utils.scm
examples/rust-codegen/: README.md  codegen.scm  model.xml
