[package]
name = "dazzle-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command-line interface for Dazzle code generation tool"

[[bin]]
name = "dazzle"
path = "src/main.rs"

[dependencies]
# Core Dazzle functionality
dazzle-core = { path = "../dazzle-core" }
dazzle-grove-libxml2 = { path = "../dazzle-grove-libxml2" }
dazzle-backend-sgml = { path = "../dazzle-backend-sgml" }

# CLI argument parsing
clap = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Garbage collection
gc = { workspace = true }

[dev-dependencies]
# Testing utilities
tempfile = "3.8"
