[package]
name = "dazzle-grove-libxml2"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "libxml2-based grove implementation for Dazzle (XML + DTD validation)"

[dependencies]
dazzle-core = { path = "../dazzle-core" }
libxml = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
